recursion.lessons.recursion.tree.Tree.scala.error
Tree:12: error: value tree is not a member of Unit
possible cause: maybe a semicolon is missing before `value tree'?
	tree(steps-1, length*shrink, angle, shrink))
        ^